<resources>
	<string name="app_name">IXOPAY Tokenization Demo</string>

	<!-- form fragment -->
	<string name="form_fragment_label">Tokenize Creditcard</string>
	<string name="card_holder">Card holder</string>
	<string name="cardholder_hint">Alex Smith</string>
	<string name="pan">PAN</string>
	<string name="pan_hint">4111111111111111</string>
	<string name="expiry_month">Month</string>
	<string name="expiry_month_hint">01</string>
	<string name="cvv">CVV</string>
	<string name="cvv_hint">123</string>
	<string name="expiry_year">Year</string>
	<string name="expiry_year_hint">2030</string>
	<string name="tokenize">Tokenize</string>

	<!-- result fragment -->
	<string name="result_fragment_label">Tokenized Creditcard</string>
	<string name="token">Token</string>
	<string name="fingerprint">Fingerprint</string>
	<string name="error">Error</string>
	<string name="stacktrace">Stacktrace</string>
	<string name="previous">Previous</string>
</resources>